# polsia

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  flake.nix  index.html
.github/workflows/: pages.yml
examples/: 00_introduction.pls  01_json.pls  02_syntax_sugar.pls  02_unification.pls  03_directives.pls  03_unification.pls  04_noexport.pls  05_types.pls  06_adts.pls  07_templating.pls  demo.pls
playground/: Justfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
playground/src/: App.tsx  cmMiamiVice.ts  cmTheme.ts  cmVaporwave.ts  editor.ts  index.css  main.tsx  pls.d.ts  polsia.ts  theme.ts
playground/src/components/: EditorPane.tsx  Footer.tsx  Header.tsx  OutputPane.tsx
playground/tests/: demo-import.test.ts  wasm.test.ts
polsia/: Cargo.toml  Justfile
polsia/src/: lib.rs  main.rs  parser.rs  types.rs  unify.rs  wasm.rs
src/: lib.rs  main.rs  parser.rs  types.rs  unify.rs  wasm.rs
