[package]
name = "polsia"
version = "0.1.0"
edition = "2024"

[dependencies]
chumsky = "0.10.1"
ariadne = "0.5.1"
serde_json = "1.0"
wasm-bindgen = { version = "0.2", optional = true }

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = []
wasm = ["wasm-bindgen"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
